# book_sharing_app_friends

./: .env.backend.example  .gitignore  BACKEND_IMPROVEMENTS_GUIDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  NEXT_STEPS.md  README.md  SEMANA_6_TESTING_DEPLOYMENT_GUIDE.md  SETUP_CHAT.md  TESTING_GUIDE.md  alembic.ini  books_with_docu.py  check_books.py  check_invitations.py  conftest.py  debug_search.py  docker-compose.yml  env.example  fix_routes_order.txt  get_user_info.py  main.py  package-lock.json  pyproject.toml  pytest.ini  render.yaml  reorganize_routes.py  requirements.txt  reset_database.py  reset_database_simple.py  reviews_implementation_checklist.md  reviews_windsurf_prompt.md  simulate_search.py  test.db  test_code.py  test_endpoint.py  test_simple_endpoint.py  test_simple_test_endpoint.py  test_with_real_token.py  verify_database.py
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  tests.yml
alembic/: env.py
alembic/versions/: 01322900dc91_create_users_and_books_tables.py  8cd83edee68a_fix_reviews_model_sqlite_compatibility.py  a4fee5145a80_update_books_soft_delete_current_.py  a94d7c678de4_fix_group_id_foreign_key_in_loans_table.py  add_cancelled_status.py  add_notifications_table.py  c4bcd84b18af_add_book_type_and_genre_fields_to_book_.py  e301a10327c7_add_loans_table.py  e460490c0896_add_groups_and_invitations_models.py  ef6ad3d88b86_fix_reviews_model_sqlite_compatibility.py  fe9995f11cd8_merge_heads_invitations_messages.py  fe_add_invitation_code.py  fe_add_messages_table.py  ff40704dc4af_add_reviews_table.py  zz_update_books_remove_book_type_add_fields.py
api_backup/: __init__.py  group_books.py  groups.py  loans.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py  scheduler.py
app/api/: __init__.py  auth.py  books.py  chat.py  group_books.py  groups.py  health.py  loans.py  metadata.py  notifications.py  reviews.py  scan.py  (+3 more)
app_information/: book_sharing_project_guide.md
docs/: API_ENDPOINTS.md  CHAT_OPTIMIZATION.md  CI_CD.md  COMO_RESETEAR_BD.md  CORRECCIONES_FINALES.md  CORRECCIONES_FRONTEND.md  CORRECCIONES_HEADERS_BUSQUEDA.md  Correcion_Chat.md  DATABASE_SETUP.md  EMAIL_CONFIGURATION.md  NOTIFICATIONS_SETUP.md  RESET_DATABASE.md  SETUP_COMPLETE.md  SISTEMA_COMPLETO_Y_PRUEBAS.md  SISTEMA_REVIEWS_IMPLEMENTADO.md  SOLUCION_BUSQUEDA_LIBROS.md  SOLUCION_FINAL_BUSQUEDA.md  api_documentation.md  essential_improvements_backend.md
frontend/: .env.local  .gitignore  README.md  TESTING_NOTES.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.mts  vitest.config.ts
tests/: conftest.py  helpers.py  test_auth.py  test_auth_comprehensive.py  test_auth_extra.py  test_auth_flow.py  test_auth_token_extra.py  test_barcode_scanner.py  test_basic.py  test_book_flow.py  test_books.py  test_books_extra.py  test_books_loans.py  test_chat.py  test_chat_flow.py  test_complete_flow.py  test_external_api_search.py  test_file_validation.py  test_group_books.py  test_group_books_extra.py  test_group_service.py  test_groups.py  test_groups_coverage.py  test_health_coverage.py  test_integration_endpoints.py  test_invitations_extra.py  test_loan_flow.py  test_loan_service.py  test_loans_extra.py  test_logger.py  test_notification_service.py  test_notifications_flow.py  test_ocr_service.py  test_pagination.py  test_rate_limiter.py  test_review_endpoints.py  test_reviews.py  test_reviews_coverage.py  test_scan.py  test_scan_coverage.py  (+6 more)
(+160 files in other folders)
