[tool.poetry]
name = "book-sharing-app-friends"
version = "0.1.0"
description = "Aplicación para compartir libros entre amigos"
authors = ["raistln <samumarfon@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"  # Cambiado de 3.13 a 3.11 para mejor compatibilidad
fastapi = {extras = ["all"], version = "^0.104.1"}
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
httpx = "^0.25.2"
pillow = "^10.1.0"  # Versión estable con binarios precompilados
pydantic-core = "^2.33.2"  # Versión compatible con Python 3.11
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
python-dateutil = "^2.8.2"
easyocr = "^1.7.2"
redis = "^5.0.0"
pyzbar = "^0.1.9"
opencv-python = "^4.7.0"
slowapi = "^0.1.9"
psutil = "^5.9.0"
numpy = "^1.26.0"
apscheduler = "^3.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pytest-cov = "^7.0.0"
pygments = "^2.19.2"
bandit = "^1.7.0"
safety = "^2.3.0"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
